<resources>
    <string name="app_name">Tip Calculator</string>
    <string name="amount">Amount</string>
    <string name="total">Total</string>
    <string name="tip_in">Tip in %</string>
    <string name="tip">Tip</string>
    <string name="_15">15%</string>
    <string name="enter_in">Enter in $</string>
    <string name="split">Split</string>
    <string name="per_head">Per Head</string>
    <string name="reset">Reset</string>
    <string name="number_of_people">Number of people</string>
</resources>
